# tokimo-ffmpeg

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  README.zh-CN.md  build.rs
.github/workflows/: ci.yml
docs/: architecture.md  benchmarks.md  build-guide.md  cli-usage.md  jellyfin-hw-pipelines.md  rsmpeg-changes.md  test-scripts.md  tokimo-hw-support.md
patches/: series
patches/local/: 0001-libavformat-mov-fix-tile-idx-list-mapping.patch  0002-fftools-add-tile-grid-auto-assembly.patch
scripts/: build-ffmpeg.sh  bundle-runtime-deps.sh  cross-build-windows.sh  docker-build.sh  extract-patches.sh  gen-binding-windows.sh  install-deps.sh
src/: error.rs  lib.rs  main.rs
src/common/: capabilities.rs  codec.rs  encoding.rs  mod.rs
src/media/: audio.rs  image.rs  mod.rs  probe.rs  remux.rs  screenshot.rs
src/transcode/: dts.rs  encode.rs  filter.rs  hw.rs  mod.rs  pipeline.rs  scheduler.rs  session.rs  types.rs  vfs_io.rs
src/transcode/pass/: analyze.rs  config.rs  demux.rs  encode.rs  flush.rs  gpu.rs  mod.rs  output.rs  targets.rs
