[package]
name = "tokimo-package-ffmpeg"
version = "0.2.0"
edition = "2024"


[[bin]]
name = "tokimo-ffmpeg"
path = "src/main.rs"

[dependencies]
rsmpeg = { version = "0.18.0", default-features = false, features = ["ffmpeg7_1", "link_system_ffmpeg"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
